--- a/testing/testing.csproj
+++ b/testing/testing.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="TimHanewich.Investing" Version="4.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
