--- a/src/SecuritiesExchangeCommissionEdgar.csproj
+++ b/src/SecuritiesExchangeCommissionEdgar.csproj
@@ -29,4 +29,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
 </Project>
